--- a/index.html
+++ b/index.html
@@ -53,26 +53,29 @@
     <script>
         let username = document.getElementById("username");
         let password= document.getElementById("password");
-        let flag=1;
+        let uflag=1,pflag=1;
         function validateForm(){
             if(username.value ==""){
                 document.getElementById("userError").innerHTML="User name is empty";
-                flag=0;
+                uflag=0;
             }
             else if(username.value.length < 3){
                 document.getElementById("userError").innerHTML="User name require min 3 char";
-                flag=0;
+                uflag=0;
             }
-            else if(password.value ==""){
+            else {
+                document.getElementById("userError").innerHTML="";
+                uflag=1;
+            }
+            if(password.value ==""){
                 document.getElementById("passError").innerHTML="Password is empty";
-                flag=0;
+                pflag=0;
             }
             else {
                 document.getElementById("passError").innerHTML="";
-                document.getElementById("userError").innerHTML="";
-                flag=1;
+                pflag=1;
             }
-            if (flag){
+            if (pflag && uflag){
             return true;
             }
             else{
